# python-ai-starter

./: .clineignore  .env.example  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/prompts/: git-branch-commit-push.prompt.md
.github/workflows/: check.yml  test.yml
src/llm/: registry.py  service.py
src/models/: llm_config.py
src/starter/: hello.py
src/utils/: logging.py
tests/llm/: test_registry.py  test_service.py
tests/models/: test_llm_config.py
tests/starter/: test_hello.py
